--- a/frontend/src/index.njk
+++ b/frontend/src/index.njk
@@ -3,6 +3,7 @@ layout: layouts/base.njk
 title: A team of professional product managers, UX specialists, talented developers and UI designers, who are ready to share their experience to solve your business objectives
 description: True web artisans. Team who making UX efficiency review, friendly UI design, smart backend microservices, high-quality web apps and many more.
 keywords: web development team, web dev team, online business improve
+action: Have an interesting project
 ---
 
 <div class="wrapper">
@@ -66,6 +67,9 @@ keywords: web development team, web dev team, online business improve
   <aside aria-label="Secondary graphics">
     {% include "partials/logo.njk" %}
   </aside>
+  <section class="action" aria-label="Feedback form">
+    {% include "partials/action.njk" %}
+  </section>
   <footer aria-label="Footer">
     {% include "partials/footer.njk" %}
   </footer>
