--- a/frontend/src/_includes/layouts/base.njk
+++ b/frontend/src/_includes/layouts/base.njk
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 {% set css %} {% include "css/reset.css" %} {% include "css/fonts.css" %} {%
-include "css/animate.css" %} {% include "css/style.css" %} {% endset %} {% set
-js %} {% include "js/script.js" %} {% endset %}
+include "css/animate.css" %} {% include "css/style.css" %} {% include
+"css/breakpoints.css" %} {% endset %} {% set js %} {% include "js/script.js" %}
+{% endset %}
 <html lang="en">
   <head>
     <meta charset="utf-8" />
