--- a/frontend/src/_includes/partials/footer.njk
+++ b/frontend/src/_includes/partials/footer.njk
@@ -1,6 +1,6 @@
 <section>
   <p>
-    &copy; 2011-2020, <strong>True web artisans</strong>.<br />
+    &copy;&nbsp;2016-2020, <strong>True web artisans</strong>.<br />
     <em>
       Illustrations & content was crafted by Vic Shóstak with &hearts; for
       people and robots.
@@ -23,7 +23,7 @@
 </section>
 <section>
   <p>
-    And you can <strong>follow</strong> us&nbsp;&darr;<br />
+    And you can <strong>follow</strong> us on&nbsp;&darr;<br />
     <a href="https://github.com/koddr" target="_blank">GitHub</a>
     <a href="https://dribbble.com/koddr" target="_blank">Dribbble</a>
     <a href="https://dev.to/koddr" target="_blank">Dev.to</a>
