--- a/frontend/src/microservices.njk
+++ b/frontend/src/microservices.njk
@@ -2,7 +2,7 @@
 layout: layouts/base.njk
 permalink: "{{ page.filePathStem }}.html"
 title: Smart backend microservices
-description:
+description: Microservices allow your business to take more and more orders. No clear and user-friendly interface will work, unless there is a fast and stable backend.
 keywords: backend, backend as a service, micro service, go micro service
 action: Need a smart backend microservice
 ---
@@ -13,9 +13,9 @@ action: Need a smart backend microservice
     <header>
       <h1>{{ title }}</h1>
       <p class="lead">
-        Design is the part of your business, that
-        <strong>makes a profit</strong>. More customers will be able to use your
-        website or web app in a convenient and clear design.
+        Microservices allow your business to take more and more orders. No clear
+        and user-friendly interface will work, unless there is a fast and stable
+        backend.
       </p>
     </header>
     <section>
