--- a/frontend/src/_includes/partials/cookie-confirm.njk
+++ b/frontend/src/_includes/partials/cookie-confirm.njk
@@ -1,7 +1,14 @@
 <div class="cookie-confirm hidden">
   <section>
-    👋&nbsp;&nbsp;Don't worry, we're using cookies to offer you a better
-    browsing experience. Like all others.
+    👋&nbsp;&nbsp;Don't worry, we're using
+    <a
+      href="https://en.wikipedia.org/wiki/HTTP_cookie"
+      title="HTTP cookie, Wikipedia"
+      target="_blank"
+      rel="noopener noreferrer"
+      >cookies</a
+    >
+    to offer you a better browsing experience. Like all others.
   </section>
   <section>
     <button type="button" class="cookie-confirm-button">
