--- a/frontend/src/_includes/partials/footer.njk
+++ b/frontend/src/_includes/partials/footer.njk
@@ -23,7 +23,7 @@
 </section>
 <section>
   <p>
-    And you can <strong>follow</strong> us on&nbsp;&darr;<br />
+    And you can <strong>follow us</strong> on&nbsp;&darr;<br />
     <a href="https://github.com/koddr" target="_blank">GitHub</a>
     <a href="https://dribbble.com/koddr" target="_blank">Dribbble</a>
     <a href="https://dev.to/koddr" target="_blank">Dev.to</a>
