--- a/frontend/src/microservices.njk
+++ b/frontend/src/microservices.njk
@@ -7,6 +7,8 @@ keywords: backend, backend as a service, micro service, go micro service
 action: Need a smart backend microservice
 ---
 
+{% block preload %} {% endblock %}
+
 <div class="wrapper">
   <main aria-label="Main content">
     {% include "partials/breadcrumb.njk" %}
