Add microservices lead info

--- a/frontend/src/microservices.njk
+++ b/frontend/src/microservices.njk
@@ -7,21 +7,20 @@ keywords: backend, backend as a service, micro service, go micro service
 action: Need a smart backend microservice
 ---
 
-{% block preload %} {% endblock %}
-
 <div class="wrapper">
   <main aria-label="Main content">
     {% include "partials/breadcrumb.njk" %}
     <header>
       <h1>{{ title }}</h1>
       <p class="lead">
-        Microservices allow your business to take more and more orders. No clear
-        and user-friendly interface will work, unless there is a fast and stable
-        backend.
+        Microservices <strong>allow your business</strong> to accept more and
+        more orders. Even the most intuitive and user-friendly interface will
+        not work, unless there is a <strong>secure</strong> and
+        <strong>stable</strong> backend behind it.
       </p>
     </header>
     <section>
-      <h2>Rules of friendly design</h2>
+      <h2>Advantages of a microservice basis</h2>
       <p>
         Over many years of experience in producing
         <strong>user-friendly interfaces</strong>, we have learned three simple
