--- a/frontend/src/microservices.njk
+++ b/frontend/src/microservices.njk
@@ -20,16 +20,15 @@ action: Need a smart backend microservice
       </p>
     </header>
     <section>
-      <h2>Advantages of a microservice basis</h2>
+      <h2>Advantages of a microservices basis</h2>
       <p>
-        Over many years of experience in producing
-        <strong>user-friendly interfaces</strong>, we have learned three simple
-        rules:
+        We highlight the following <strong>benefits</strong> of using
+        microservices for your online business:
       </p>
       <ul>
-        <li>Design should be as clear as possible</li>
-        <li>All controls of interaction must be comfortable</li>
-        <li>Accessibility for any person and device</li>
+        <li>Simple maintenance and support</li>
+        <li>Maximum speed under high load</li>
+        <li>Problem-free scalability</li>
       </ul>
     </section>
   </main>
