--- a/frontend/src/web-apps.njk
+++ b/frontend/src/web-apps.njk
@@ -2,9 +2,9 @@
 layout: layouts/base.njk
 permalink: "{{ page.filePathStem }}.html"
 title: High-quality web applications
-description:
-keywords: backend, backend as a service, micro service, go micro service
-action: Need high-quality web application
+description: A tool to convert website visitors to satisfied customers of your online business. Who just works for you without lunch or a weekend.
+keywords: webapp, web apps, pwa, progressive web apps, web applications
+action: Need a high-quality web application
 ---
 
 <div class="wrapper">
@@ -13,22 +13,22 @@ action: Need high-quality web application
     <header>
       <h1>{{ title }}</h1>
       <p class="lead">
-        Design is the part of your business, that
-        <strong>makes a profit</strong>. More customers will be able to use your
-        website or web app in a convenient and clear design.
+        A tool to convert website visitors to
+        <strong>satisfied customers</strong> of your online business. Who just
+        works for you <strong>without</strong> lunch or a weekend.
       </p>
     </header>
     <section>
-      <h2>Rules of friendly design</h2>
+      <h2>Why is it profitable?</h2>
       <p>
-        Over many years of experience in producing
-        <strong>user-friendly interfaces</strong>, we have learned three simple
-        rules:
+        The main reasons for the total <strong>migration</strong> of many online
+        businesses to web applications today are:
       </p>
       <ul>
-        <li>Design should be as clear as possible</li>
-        <li>All controls of interaction must be comfortable</li>
-        <li>Accessibility for any person and device</li>
+        <li>Almost complete replacement of mobile applications</li>
+        <li>Easier delivery of complex services to the end user</li>
+        <li>Better user interaction through interactive elements</li>
+        <li>Ability to work with weak Internet signal</li>
       </ul>
     </section>
   </main>
