--- a/frontend/src/_includes/partials/footer.njk
+++ b/frontend/src/_includes/partials/footer.njk
@@ -15,18 +15,23 @@
     </em>
     This is a great place to <strong>meet us</strong> and find out
     <strong>how we can be useful</strong> to each other. For a short, we can
-    help with <a href="/ux-reviews.html">UX</a>,
-    <a href="/ui-design.html">UI</a>,
-    <a href="/microservices.html">microservices</a>,
-    <a href="/web-apps.html">web apps</a>.
+    help with <a href="/ux-reviews">UX</a>, <a href="/ui-design">UI</a>,
+    <a href="/microservices">microservices</a>,
+    <a href="/web-apps">web apps</a>.
   </p>
 </section>
 <section>
   <p>
     And you can <strong>follow us</strong> on&nbsp;&darr;<br />
-    <a href="https://github.com/koddr" target="_blank">GitHub</a>
-    <a href="https://dribbble.com/koddr" target="_blank">Dribbble</a>
-    <a href="https://dev.to/koddr" target="_blank">Dev.to</a>
-    <a href="https://twitter.com/true_koddr" target="_blank">Twitter</a>
+    <a href="https://github.com/koddr" target="_blank" rel="noreferrer"
+      >GitHub</a
+    >
+    <a href="https://dribbble.com/koddr" target="_blank" rel="noreferrer"
+      >Dribbble</a
+    >
+    <a href="https://dev.to/koddr" target="_blank" rel="noreferrer">Dev.to</a>
+    <a href="https://twitter.com/true_koddr" target="_blank" rel="noreferrer"
+      >Twitter</a
+    >
   </p>
 </section>
