--- a/frontend/src/index.njk
+++ b/frontend/src/index.njk
@@ -26,22 +26,22 @@ action: Have an interesting project
       <nav aria-label="Main menu">
         <ul>
           <li>
-            <a href="/ux-reviews.html" title="UX efficiency reviews">
+            <a href="/ux-reviews" title="UX efficiency reviews">
               UX efficiency reviews
             </a>
           </li>
           <li>
-            <a href="/ui-design.html" title="Friendly UI design">
+            <a href="/ui-design" title="Friendly UI design">
               Friendly UI design
             </a>
           </li>
           <li>
-            <a href="/microservices.html" title="Smart backend microservices">
+            <a href="/microservices" title="Smart backend microservices">
               Smart backend microservices
             </a>
           </li>
           <li>
-            <a href="/web-apps.html" title="High-quality web apps">
+            <a href="/web-apps" title="High-quality web apps">
               High-quality web apps
             </a>
           </li>
