--- a/src/index.njk
+++ b/src/index.njk
@@ -59,8 +59,8 @@ action: Have an interesting project
       <p>
         The simple magic is based on <strong>Golang</strong>, modern
         <strong>JavaScript</strong> and <strong>CSS</strong>. Fast and secure
-        delivery of developed web apps and microservices to any servers by
-        <strong>Docker</strong> containers.
+        delivery of developed web apps & microservices to any servers by
+        <strong>Docker</strong> containers and <strong>Ansible</strong> automation.
       </p>
     </section>
   </main>
